style.css
/*Font sizing 32/28/25/22/20/18/16/14/12*/
/*Colors main 780000 gray fdf0d5*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*background color temporary*/

body {
  font-family: "Inter", sans-serif;
  font-size: 18;
  color: #fdf0d5;
  margin: 0 auto;
  background-color: #581f1f;
  position: relative;
  height: auto;
  overflow-x: hidden;
}

/********************/
/**Component Styles**/
/********************/

h1 {
  font-size: 50px;
  font-weight: 500;
  line-height: 1;
  letter-spacing: 1px;
  text-transform: uppercase;
  margin-bottom: 10px;
}

p {
  margin-left: 9px;
}

ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 12px;
  letter-spacing: 1px;
}

.container {
  justify-content: center;
  margin: 20px auto;
  height: 100%;
  width: 100%;
}

.navmenu {
  display: flex;
  flex-direction: column;
  gap: 50px;
  position: fixed;
  left: 0;
  top: 0;
  width: 13rem;
  padding: 20px 20px;
  background-color: #2c111160;
  height: 100%;
  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.1);
  z-index: 100;
}

a:link,
a:visited {
  color: #fdf0d5;
  text-decoration: none;
}
a:hover {
  color: #ffffff;
}
.icon {
  color: #fdf0d5;
  font-size: 45px;
}
.portfolio {
  height: 100%;
  width: 100%;
  min-height: 100%;
  min-width: 70%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  justify-content: end;
  gap: 1rem;
}
.images {
  width: 70%;
  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.178);
}

.collate:hover {
  transform: scale(1.5);
  z-index: 99;
}

.aboutme {
  display: flex;
  margin-left: 16rem;
  flex-direction: column;
  width: 50rem;
  height: 50rem;
  gap: 28px;
  justify-content: center;
  background-color: #2e111193;
  padding: 70px 70px;
  border-radius: 30px 30px;
  margin-top: 2rem;
}
.aboutmedescription {
  display: flex;
  flex-direction: row-reverse;
  gap: 64px;
  justify-content: center;
}
/********************/
/**Specific Styles***/
/********************/

.head {
  grid-column: 1/4;
  width: 100%;
  align-self: center;
  justify-self: center;
}
.collate {
  z-index: 98;
  width: 100%;
}
footer {
  font-size: 13px;
  color: #bbb09b;
}

h2 {
  font-size: 50px;
  font-weight: 700;
}
.aboutmetitle {
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 1.2px;
  line-height: 1.5;
}
.aboutmeimage {
  width: 300px;
}

.contacts {
  font-size: 32px;
  display: flex;
  gap: 100px;
  margin-top: 50px;
  justify-content: center;
}
.contacticon {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.privateinfo {
  padding: 18px 0;
  font-size: 16px;
}

.copyright {
  position: fixed;
  bottom: 0;
}

